--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://fluff-stuff.herokuapp.com/",
   "name": "fluff-stuff",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
@@ -18,6 +20,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "react-scripts build",
+    "build:staging": "env-cmd -f .env.staging npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
