--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "homepage": "https://fluff-stuff.herokuapp.com/",
   "name": "fluff-stuff",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.13.1"},
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
