--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "build:staging": "env-cmd -f .env.staging npm run build",
     "test": "react-scripts test",
